--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     </div>
                     <div>
                         <h4 class="font-medium">邮箱</h4>
-                        <p>contact@example.com</p>
+                        <p>daiying500@gmail.com</p>
                     </div>
                 </div>
             </div>
